# entaltek-rentas

./: .env.example  .env.production.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_full_property_contract.py
backend/app/: main.py
backend/app/api/routes/: leads.py  properties.py
backend/app/core/: config.py  exceptions.py  slugify.py
backend/app/db/: session.py
backend/app/models/: lead.py  property.py
backend/app/schemas/: lead.py  property.py
backend/app/services/: lead_service.py  property_service.py  storage.py
backend/entaltek_rentas_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_slugify.py
backend/tests/api/: test_leads.py  test_properties.py
docs/: PRODUCT_BRIEF.md  ROADMAP.md  TECHNICAL_DECISIONS.md
src/: form-copy-polish.css  home-layout.css  home-polish.css  layout-overrides.css  main.tsx  property-flow-polish.css  public-editor-polish.css  styles.css  ux-overrides.css  vite-env.d.ts
src/api/: client.ts  leads.ts  properties.ts
src/components/: Header.tsx  LandingSkeleton.tsx  LeadForm.tsx  ListingQualityCard.tsx  MarketplaceCopy.tsx  NearbyPlacesEditor.tsx  PhotoManager.tsx  PropertyForm.tsx  PropertyLanding.tsx  SiteFooter.tsx  SmartTourSpotlight.tsx  Toast.tsx  (+1 more)
supabase/: schema.sql
(+21 files in other folders)
